refactor/feat: removing authentication from service and implementing is blocked logic