@@ -1,15 +1,15 @@
 package com.raponi.blog.application.service.account;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import com.raponi.blog.application.usecase.account.FindAllAccountsUseCase;
+import com.raponi.blog.application.validators.AccountValidatorService;
+import com.raponi.blog.domain.model.Account;
 import com.raponi.blog.domain.repository.AccountRepository;
-import com.raponi.blog.presentation.dto.AccountResponseDTO;
+import com.raponi.blog.presentation.dto.PublicAccountResponseDTO;
 import com.raponi.blog.presentation.mapper.AccountMapper;
 
 @Service
@@ -17,21 +17,28 @@ public class FindAllAccountsService implements FindAllAccountsUseCase {
 
   private final AccountRepository accountRepository;
   private final AccountMapper accountMapper;
+  private final AccountValidatorService accountValidatorService;
 
-  public FindAllAccountsService(AccountRepository accountRepository, AccountMapper accountMapper) {
+  public FindAllAccountsService(AccountRepository accountRepository, AccountMapper accountMapper,
+      AccountValidatorService accountValidatorService) {
     this.accountRepository = accountRepository;
     this.accountMapper = accountMapper;
+    this.accountValidatorService = accountValidatorService;
   }
 
   @Override
-  public List<AccountResponseDTO> handle() {
-    Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-    String role = auth.getAuthorities().iterator().next().getAuthority();
-    if (role.equals("ROLE_ADMIN"))
-      return this.accountRepository.findAll().stream().map(accountMapper::toResponse).collect(Collectors.toList());
-    else
-      return this.accountRepository.findAllByActiveIsTrue().stream().map(accountMapper::toResponse)
-          .collect(Collectors.toList());
+  public List<PublicAccountResponseDTO> handle() {
+    if (this.accountValidatorService.isAdmin()) {
+      return this.accountRepository.findAll().stream().map(accountMapper::toPublicAccountResponseDTO).toList();
+    } else {
+      List<Account> accounts = this.accountRepository.findAllByActiveIsTrue();
+      List<Account> nonBlockedAccounts = new ArrayList<Account>();
+      accounts.forEach(account -> {
+        if (!this.accountValidatorService.isBlocked(account.getId()))
+          nonBlockedAccounts.add(account);
+      });
+      return nonBlockedAccounts.stream().map(accountMapper::toPublicAccountResponseDTO).toList();
+    }
   }
 
 }
